[gd_scene load_steps=13 format=3 uid="uid://b0swnnau30nlf"]

[ext_resource type="PackedScene" uid="uid://btansj7xgyqwf" path="res://assets/models/the_language_bird/the_language_bird.blend" id="1_3y5ut"]
[ext_resource type="Script" path="res://modules/the_language_bird/the_language_bird.gd" id="1_dpg82"]
[ext_resource type="Script" path="res://addons/godot_state_charts/state_chart.gd" id="3_0nilg"]
[ext_resource type="Script" path="res://addons/godot_state_charts/compound_state.gd" id="4_tbx6g"]
[ext_resource type="Script" path="res://addons/godot_state_charts/atomic_state.gd" id="5_ks2lm"]
[ext_resource type="Script" path="res://modules/the_language_bird/angry.gd" id="6_gidxv"]
[ext_resource type="Script" path="res://addons/godot_state_charts/transition.gd" id="6_jwehy"]
[ext_resource type="AudioStream" uid="uid://cbylh5cmkoyb" path="res://assets/sfx/the_language_bird_anger.wav" id="8_y3ptd"]
[ext_resource type="Script" path="res://modules/the_language_bird/patrol.gd" id="8_yoytd"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_y327w"]
radius = 3.5
height = 25.0

[sub_resource type="BoxShape3D" id="BoxShape3D_m0ile"]
size = Vector3(1.0778, 2.01351, 0.528442)

[sub_resource type="SphereShape3D" id="SphereShape3D_x00th"]
radius = 2.5

[node name="TheLanguageBird" type="CharacterBody3D" groups=["the_language_birds"]]
script = ExtResource("1_dpg82")

[node name="NavAgent" type="NavigationAgent3D" parent="."]
avoidance_enabled = true

[node name="StateChart" type="Node" parent="."]
script = ExtResource("3_0nilg")

[node name="Root" type="Node" parent="StateChart"]
script = ExtResource("4_tbx6g")
initial_state = NodePath("Patrol")

[node name="Angry" type="Node" parent="StateChart/Root"]
script = ExtResource("5_ks2lm")

[node name="Angry" type="Node" parent="StateChart/Root/Angry"]
script = ExtResource("6_gidxv")

[node name="Timer" type="Timer" parent="StateChart/Root/Angry/Angry"]
autostart = true

[node name="Patrol" type="Node" parent="StateChart/Root/Angry"]
script = ExtResource("6_jwehy")
to = NodePath("../../Patrol")
event = &"angry_zone_exited"
delay_in_seconds = "3.0"

[node name="Audio" type="AudioStreamPlayer3D" parent="StateChart/Root/Angry"]
stream = ExtResource("8_y3ptd")
volume_db = 20.0
bus = &"SFX"

[node name="Patrol" type="Node" parent="StateChart/Root"]
script = ExtResource("5_ks2lm")

[node name="Angry" type="Node" parent="StateChart/Root/Patrol"]
script = ExtResource("6_jwehy")
to = NodePath("../../Angry")
event = &"angry_zone_entered"
delay_in_seconds = "5.0"

[node name="Patrol" type="Node" parent="StateChart/Root/Patrol"]
script = ExtResource("8_yoytd")

[node name="Timer" type="Timer" parent="StateChart/Root/Patrol/Patrol"]
wait_time = 5.0
autostart = true

[node name="AngryZone" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="AngryZone"]
transform = Transform3D(1, 0, 0, 0, -0.0323353, -0.999477, 0, 0.999477, -0.0323353, 0, 0, 5.68557)
shape = SubResource("CapsuleShape3D_y327w")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="AngryZone"]
transform = Transform3D(-4.36633e-08, -0.99945, 0.0331552, -2.89852e-09, -0.0331552, -0.99945, 1, -4.37354e-08, -1.44926e-09, 0, 0, 14.7298)
shape = SubResource("CapsuleShape3D_y327w")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0538459, -0.113143, -0.236)
shape = SubResource("BoxShape3D_m0ile")

[node name="KillZone" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="KillZone"]
shape = SubResource("SphereShape3D_x00th")

[node name="the_language_bird" parent="." instance=ExtResource("1_3y5ut")]

[connection signal="velocity_computed" from="NavAgent" to="." method="_on_nav_agent_velocity_computed"]
[connection signal="state_entered" from="StateChart/Root/Angry" to="StateChart/Root/Angry/Angry" method="_on_angry_state_entered"]
[connection signal="state_exited" from="StateChart/Root/Angry" to="StateChart/Root/Angry/Angry" method="_on_angry_state_exited"]
[connection signal="timeout" from="StateChart/Root/Angry/Angry/Timer" to="StateChart/Root/Angry/Angry" method="_on_timer_timeout"]
[connection signal="state_entered" from="StateChart/Root/Patrol" to="StateChart/Root/Patrol/Patrol" method="_on_patrol_state_entered"]
[connection signal="timeout" from="StateChart/Root/Patrol/Patrol/Timer" to="StateChart/Root/Patrol/Patrol" method="_on_timer_timeout"]
[connection signal="body_entered" from="AngryZone" to="StateChart/Root/Patrol/Patrol" method="_on_angry_zone_body_entered"]
[connection signal="body_exited" from="AngryZone" to="StateChart/Root/Angry/Angry" method="_on_angry_zone_body_exited"]

[editable path="the_language_bird"]
